--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,6 +3,8 @@ project:
 
 website:
   title: "Solverism"
+  favicon: logo-96x96.png
+  open-graph: true
   navbar:
     right:
       - about.qmd
@@ -14,6 +16,3 @@ format:
       light: flatly
       dark: darkly
     css: styles.css
-
-
-
