--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,10 +4,13 @@ project:
 website:
   title: "Solverism"
   favicon: logo-96x96.png
+  site-url: https://solverism.com
+  repo-url: https://github.com/Blee1077/solverism-quarto-blog
   open-graph: true
   navbar:
     right:
-      - about.qmd
+      - text: "About"
+        file: about.qmd
       - icon: github
         href: https://github.com/Blee1077/
 format:
